--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/static/images/icon.png" type="image/x-icon">
-  <title>Game Selector</title>
+  <title>Project-Mahoraga</title>
   <link rel="stylesheet" href="../static/css/index_styles.css" style="filter: grayscale(100%);">
 </head>
 <body>
